[Java] Configure Java compiler settings once for all tasks that need to compile